[package]
name = "christmas_2022"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "_prisma-cli" ]

[dependencies]
axum = { version = "0.6.18", features = ["headers", "macros"] }
base64 = "0.21.2"
chrono = "0.4.24"
derive_more = "0.99.17"
dotenvy = "0.15"
dotenv_codegen = "0.15.0"
glob = "0.3.0"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
log = "0.4.18"
mockall = "0.11.3"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = ["sqlite"] }
rand = "0.8.5"
regex = "1.6.0"
rust-argon2 = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
serde_with = "2.0.1"
# sqlx = { version = "0.6", features = [ "chrono", "runtime-tokio-rustls", "sqlite" ] }
sha2 = "0.10.6"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["serde", "v4"] }